[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/ui/HostGameMenu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.09, 0.10, 0.12, 0.92)
border_color = Color(0.18, 0.20, 0.24, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color(0, 0, 0, 0.35)
shadow_size = 10
content_margin_left = 24
content_margin_right = 24
content_margin_top = 22
content_margin_bottom = 22

[node name="HostGameMenu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.45)

[node name="Root" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="Root"]
custom_minimum_size = Vector2(560, 380)
theme_override_styles/panel = SubResource("1")

[node name="Margin" type="MarginContainer" parent="Root/Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Root/Panel/Margin"]
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Root/Panel/Margin/VBox"]
text = "Host Game"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="Subtitle" type="Label" parent="Root/Panel/Margin/VBox"]
text = "Configure your server settings."
horizontal_alignment = 1
autowrap_mode = 2
theme_override_font_sizes/font_size = 14
modulate = Color(1, 1, 1, 0.8)

[node name="Spacer1" type="Control" parent="Root/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 8)

[node name="PortLabel" type="Label" parent="Root/Panel/Margin/VBox"]
text = "Port"
theme_override_font_sizes/font_size = 14

[node name="PortEdit" type="LineEdit" parent="Root/Panel/Margin/VBox"]
unique_name_in_owner = true
text = "8910"
placeholder_text = "Port"
custom_minimum_size = Vector2(0, 40)

[node name="Spacer2" type="Control" parent="Root/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 8)

[node name="HostButton" type="Button" parent="Root/Panel/Margin/VBox"]
unique_name_in_owner = true
text = "Start Hosting"
custom_minimum_size = Vector2(0, 44)

[node name="BackButton" type="Button" parent="Root/Panel/Margin/VBox"]
unique_name_in_owner = true
text = "Back"
custom_minimum_size = Vector2(0, 44)
